-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0
-
None
-
777b08f06d8af84e2b4263bcf7105cdec629dc88
When in Debug mode, the menu entry "Automatically Hide View Title Bars" is displayed twice in the "Window->views" sub-menu.
Screenshot is attached.
| For Gerrit Dashboard: QTCREATORBUG-15159 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 139028,2 | Debugger: Show "Automatically Hide View Title Bars" option only once | 3.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |