Debugger: Show "Automatically Hide View Title Bars" option only once

Task-number: QTCREATORBUG-15159
Change-Id: I0bd029c97a152887ad84181e551eb6a6b9bd764a
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>